<resources>
    <string name="app_name">Ogrenci Evi</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="ogrenci_evine_hosgeldin">Öğrenci Evi\'ne Hoşgeldin</string>
    <string name="ogrenci_evi_sadece_ogrencilerin">Öğrenci Evi, sadece öğrencilerin öğrenci kartını veya belgesini kullanarak katılabildiği bir platformdur.</string>
    <string name="kullanmadigin_esyalari_sat">Kullanmadığın eşyalarını sat</string>
    <string name="kullanmadigin_esyalari_ayni_sehirde">Kullanmadığın eşyalarını, aynı şehirde okuduğun diğer öğrenciler ile anlaşarak satabilirsin</string>
    <string name="ihtiyaci_olan_esyalara">İhtiyacın olan Eşyalara Ulaş</string>
    <string name="ihtiyaci_olan_insanlarin">İhtiyacın olan eşyaları, şehrindeki diğer öğrenciler ile anlaşarak satın alabilirsin.</string>
    <string name="kendine_ev_arkadasi_bul">Kendine Ev Arkadaşı Bul</string>
    <string name="birlikte_ev_arkadasi_olabilecegin">Birlikte ev arkadaşı olabileceğiniz, okuduğun şehirdehi diğer öğrencileri bul.</string>
    <string name="katil">Katıl</string>
    <string name="tekrar_hosgeldin">Tekrar Hoşgeldin!</string>
    <string name="bir_hesabin_varsa_giris_yapabilirsin">Bir hesabın varsa giriş yapabilirsin</string>
    <string name="mail_adresi">Mail Adresi</string>
    <string name="sifre">Şifre</string>
    <string name="sifremi_unuttum">Şifremi Unuttum?</string>
    <string name="giris">Giriş</string>
    <string name="hesap_olusturmak_icin_tikla">Hesap oluşturmak için tıkla!</string>
    <string name="kisisel_bilgiler">Kişisel Bilgiler</string>
    <string name="okulunu_sec">Okulunu Seç</string>
    <string name="ara">Ara</string>
    <string name="ilerle">İlerle</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="telefon_numarasi">Telefon Numarası</string>
    <string name="ogrenci_onay">Öğrenci Onay</string>
    <string name="ogrenci_kimligini_veya">Öğrenci kimliğini veya öğrenci belgeni yükleyerek, öğrenci olduğunu doğrula.</string>
    <string name="veya">veya</string>
    <string name="tamamla">Tamamla</string>
    <string name="uyeligin_alindi">Üyeliğin Alındı</string>
    <string name="ogrenci_kimligin_ve_verdigin_bilgileri">Öğrenci kimliğin ve verdiğin bilgiler onaylana kadar bizden haber bekle.</string>
    <string name="sakarya_uygulamali_bilimler_universitesi">Sakarya Uygulamalı Bilimler Üniversitesi</string>
    <string name="tamam">Tamam</string>
    <string name="hata">Hata</string>
    <string name="parola_sifirla">Parola Sıfırla</string>
    <string name="email">Email</string>
    <string name="email_giriniz">Email giriniz</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="favoriler">Favoriler</string>
    <string name="profilim">Profilim</string>
    <string name="mesajlar">Mesajlar</string>
    <string name="aradigin_esyayi_bul">Aradığın Eşyayı Bul</string>
    <string name="ilan_olustur">İlan oluştur</string>
    <string name="tumunu_gor">Tümünü gör</string>
    <string name="fotograf_yuklemek_icin_tikla">Fotoğraf yüklemek için tıkla</string>
    <string name="kvkk">KVKK Metnini okudum,onaylıyorum</string>
    <string name="ev_ilani_var">Ev İlanı Ver</string>
    <string name="tanitim_yazisi_giriniz">Tanıtım yazısı giriniz</string>
    <string name="mesaj_at">Mesaj At</string>
    <string name="tanitim">Tanıtım</string>
</resources>