<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="5dp"
    app:cardBackgroundColor="#181A20"
    app:cardCornerRadius="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parola_sifirla"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            />

        <EditText
            android:id="@+id/erd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.5dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:paddingVertical="10dp"
            android:hint="@string/email_giriniz"
            android:textColorHint="#656565"
            android:paddingHorizontal="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/erd_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamam"
            android:layout_gravity="center"
            android:layout_marginTop="17.5dp"
            android:backgroundTint="@color/color1"
            />

    </LinearLayout>



</androidx.cardview.widget.CardView>