<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@drawable/login_background"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/toolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_left"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/illust_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_black"
            android:text="@string/tekrar_hosgeldin"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/bir_hesabin_varsa_giris_yapabilirsin"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        <EditText
            android:id="@+id/login_email"
            android:hint="@string/mail_adresi"
            android:inputType="textEmailAddress"
            style="@style/editStyle"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="0dp"
            android:textColorHint="@color/hint"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/hint"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_sifre"
                style="@style/editStyle"
                android:inputType="textPassword"
                android:imeOptions="actionDone"




                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_unuttum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sifremi_unuttum"
            android:layout_marginTop="15dp"
            android:layout_gravity="end"
            android:fontFamily="@font/raleway_regular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/login_giris"
            android:layout_marginTop="12.5dp"
            android:layout_gravity="center"
            android:text="@string/giris"
            style="@style/girisButtonStyle"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/login_hesapolustur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hesap_olusturmak_icin_tikla"

        android:textSize="16sp"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>