<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity"
    android:background="#181A20"
    >


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/succesmark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uyeligin_alindi"
            android:fontFamily="@font/urbanist_bold"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/ogrenci_kimligin_ve_verdigin_bilgileri"
            android:fontFamily="@font/raleway_regular"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dp"

            />

        <Button
            android:id="@+id/signup_slider_4_girisyap"
            style="@style/girisButtonStyle"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/giris_yap"
            android:layout_marginHorizontal="15dp"

            />
    </LinearLayout>










</androidx.constraintlayout.widget.ConstraintLayout>