<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity"
    android:background="#181A20"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signup_slider_3_toolbar"
        style="@style/toolbarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_left" />

    <ImageView
        android:id="@+id/imageView6"
        style="@style/topbarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/top_circle_3"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/ogrenci_onay"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imageView7"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ogrenci_kimligini_veya"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanist_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_slider_3_toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <ImageView
            android:id="@+id/signup_slider_3_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/dosya_sec" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/divider" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/urbanist_regular"
                android:gravity="center"
                android:text="@string/veya"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/divider" />
        </LinearLayout>

        <Button
            android:id="@+id/signup_slider_3_camera"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/fotograf_cek_button" />

        <CheckBox
            android:id="@+id/signup_slider_3_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/color1"
            android:text="@string/kvkk"
            android:textColor="@color/color1"
            android:textSize="15sp" />


    </LinearLayout>


    <Button
        android:id="@+id/signup_slider_3_tamamla"
        style="@style/girisButtonStyle"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="50dp"
        android:text="@string/tamamla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>